// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayCard renders a ClayCard as a directory 1`] = `
<div
  className="card"
>
  <div
    className="card card-horizontal"
  >
    <div
      className="card-body"
    >
      <div
        className="card-row"
      >
        <div
          className="flex-col"
        >
          <span
            className="sticker sticker-rounded sticker-secondary"
          >
            <span
              className="sticker-overlay inline-item"
            >
              <svg
                className="lexicon-icon lexicon-icon-folder"
                role="presentation"
              >
                <use
                  xlinkHref="/path/to/some/resource.svg#folder"
                />
              </svg>
            </span>
          </span>
        </div>
        <div
          className="autofit-col autofit-col-expand autofit-col-gutters"
        >
          <div
            className="autofit-section"
          >
            <div
              className="card-title text-truncate"
            >
              Very Large Folder
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayCard renders a ClayCard as a file card 1`] = `
<div
  className="card card-type-asset file-card"
>
  <div
    className="card-item-first aspect-ratio"
  >
    <div
      className="aspect-ratio-item aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon"
    >
      <svg
        className="lexicon-icon lexicon-icon-documents-and-media"
        role="presentation"
      >
        <use
          xlinkHref="/path/to/some/resource.svg#documents-and-media"
        />
      </svg>
    </div>
    <span
      className="sticker sticker-rounded sticker-danger sticker-bottom-left"
    >
      <span
        className="sticker-overlay"
      >
        DOC
      </span>
    </span>
  </div>
  <div
    className="card-body"
  >
    <div
      className="card-row"
    >
      <div
        className="autofit-col autofit-col-expand"
      >
        <section
          className="autofit-section"
        >
          <div
            className="card-title text-truncate"
          >
            deliverable.doc
          </div>
          <div
            className="card-subtitle text-truncate"
          >
            Stevie Ray Vaughn
          </div>
          <div
            className="card-detail"
          >
            <span
              className="label label-success"
            >
              <span
                className="label-item label-item-expand"
              >
                Approved
              </span>
            </span>
          </div>
        </section>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayCard renders a ClayCard as a selectable file card 1`] = `
<div
  className="card-type-asset file-card form-check form-check-card form-check-top-left"
>
  <div
    className="card"
  >
    <div
      className="card-item-first aspect-ratio"
    >
      <div
        className="custom-control custom-checkbox"
      >
        <label>
          <input
            checked={false}
            className="custom-control-input"
            disabled={false}
            onChange={[Function]}
            type="checkbox"
            value="false"
          />
          <span
            className="custom-control-label"
          />
          <div
            className="aspect-ratio-item aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon"
          >
            <svg
              className="lexicon-icon lexicon-icon-documents-and-media"
              role="presentation"
            >
              <use
                xlinkHref="/path/to/some/resource.svg#documents-and-media"
              />
            </svg>
          </div>
          <span
            className="sticker sticker-rounded sticker-danger sticker-bottom-left"
          >
            <span
              className="sticker-overlay"
            >
              DOC
            </span>
          </span>
        </label>
      </div>
    </div>
    <div
      className="card-body"
    >
      <div
        className="card-row"
      >
        <div
          className="autofit-col autofit-col-expand"
        >
          <section
            className="autofit-section"
          >
            <div
              className="card-title text-truncate"
            >
              deliverable.doc
            </div>
            <div
              className="card-subtitle text-truncate"
            >
              Stevie Ray Vaughn
            </div>
            <div
              className="card-detail"
            >
              <span
                className="label label-success"
              >
                <span
                  className="label-item label-item-expand"
                >
                  Approved
                </span>
              </span>
            </div>
          </section>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayCard renders a ClayCard as a selectable folder 1`] = `
<div
  className="card-type-directory form-check form-check-card form-check-middle-left"
>
  <div
    className="custom-control custom-checkbox"
  >
    <label>
      <input
        checked={false}
        className="custom-control-input"
        disabled={false}
        onChange={[Function]}
        type="checkbox"
        value="false"
      />
      <span
        className="custom-control-label"
      />
      <div
        className="card card-horizontal"
      >
        <div
          className="card-body"
        >
          <div
            className="card-row"
          >
            <div
              className="autofit-col"
            >
              <span
                className="sticker sticker-rounded sticker-secondary"
              >
                <span
                  className="sticker-overlay inline-item"
                >
                  <svg
                    className="lexicon-icon lexicon-icon-folder"
                    role="presentation"
                  >
                    <use
                      xlinkHref="/path/to/some/resource.svg#folder"
                    />
                  </svg>
                </span>
              </span>
            </div>
            <div
              className="autofit-col autofit-col-expand autofit-col-gutters"
            >
              <div
                className="card-title text-truncate"
              >
                Very Large Folder
              </div>
            </div>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`ClayCard renders a ClayCard as a selectable image card 1`] = `
<div
  className="card-type-asset form-check form-check-card form-check-top-left image-card"
>
  <div
    className="card"
  >
    <div
      className="card-item-first aspect-ratio"
    >
      <div
        className="custom-control custom-checkbox"
      >
        <label>
          <input
            checked={false}
            className="custom-control-input"
            disabled={false}
            onChange={[Function]}
            type="checkbox"
            value="false"
          />
          <span
            className="custom-control-label"
          />
          <div
            className="aspect-ratio"
          >
            <img
              alt="thumbnail"
              className="aspect-ratio-item aspect-ratio-item-center-middle aspect-ratio-item-fluid"
              src="https://via.placeholder.com/256"
            />
          </div>
          <span
            className="sticker sticker-rounded sticker-danger sticker-bottom-left"
          >
            <span
              className="sticker-overlay"
            >
              <svg
                className="lexicon-icon lexicon-icon-document-image"
                role="presentation"
              >
                <use
                  xlinkHref="/path/to/some/resource.svg#document-image"
                />
              </svg>
            </span>
          </span>
        </label>
      </div>
    </div>
    <div
      className="card-body"
    >
      <div
        className="card-row"
      >
        <div
          className="autofit-col autofit-col-expand"
        >
          <div
            className="card-title text-truncate"
          >
            thumbnail_coffee.jpg
          </div>
          <div
            className="card-subtitle text-truncate"
          >
            Author Action
          </div>
          <div
            className="card-detail"
          >
            <span
              className="label label-success"
            >
              <span
                className="label-item label-item-expand"
              >
                Approved
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayCard renders a ClayCard as a template navigation card truncating text on description 1`] = `
<a
  className="card card-interactive card-interactive-primary card-type-template template-card"
>
  <span
    className="aspect-ratio"
  >
    <span
      className="aspect-ratio-item aspect-ratio-item-center-middle aspect-ratio-item-flush"
    >
      <img
        alt="content image"
        src="/path/to/some/resource.svg"
      />
    </span>
  </span>
  <span
    className="card-body"
  >
    <span
      className="card-title text-truncate"
    >
      Content Page
    </span>
    <span
      className="card-text"
    >
      This is an example of card-type-template using an anchor tag.
    </span>
  </span>
</a>
`;

exports[`ClayCard renders a ClayCard as image card 1`] = `
<div
  className="card card-type-asset form-check form-check-card form-check-top-left image-card"
>
  <div
    className="card-item-first aspect-ratio"
  >
    <img
      alt="thumbnail"
      className="aspect-ratio-item aspect-ratio-item-center-middle aspect-ratio-item-fluid"
      src="https://via.placeholder.com/256"
    />
    <span
      className="sticker sticker-rounded sticker-danger sticker-bottom-left"
    >
      <span
        className="sticker-overlay"
      >
        <svg
          className="lexicon-icon lexicon-icon-document-image"
          role="presentation"
        >
          <use
            xlinkHref="/path/to/some/resource.svg#document-image"
          />
        </svg>
      </span>
    </span>
  </div>
  <div
    className="card-body"
  >
    <div
      className="card-row"
    >
      <div
        className="autofit-col autofit-col-expand"
      >
        <div
          className="card-title text-truncate"
        >
          thumbnail_coffee.jpg
        </div>
        <div
          className="card-subtitle text-truncate"
        >
          Author Action
        </div>
        <div
          className="card-detail"
        >
          <span
            className="label label-success"
          >
            <span
              className="label-item label-item-expand"
            >
              Approved
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayCard renders a ClayCard as template navigation card 1`] = `
<a
  className="card card-interactive card-interactive-primary card-type-template template-card"
>
  <span
    className="aspect-ratio"
  >
    <span
      className="aspect-ratio-item aspect-ratio-item-center-middle aspect-ratio-item-flush"
    >
      <img
        alt="portlet image"
        src="/path/to/some/resource.svg"
      />
    </span>
  </span>
  <span
    className="card-body"
  >
    <span
      className="card-title text-truncate"
    >
      Widget Page
    </span>
    <span
      className="card-text text-truncate"
    >
      Build a page by adding widgets and content.
    </span>
  </span>
</a>
`;

exports[`ClayCard renders a ClayCard as template navigation card as horizontal card 1`] = `
<a
  className="card card-interactive card-interactive-primary card-type-template template-card-horizontal"
>
  <span
    className="card-body"
  >
    <span
      className="card-row"
    >
      <span
        className="autofit-col"
      >
        <span
          className="sticker sticker-rounded sticker-light"
        >
          <span
            className="sticker-overlay inline-item"
          >
            <svg
              className="lexicon-icon lexicon-icon-page"
              role="presentation"
            >
              <use
                xlinkHref="/path/to/some/resource.svg#page"
              />
            </svg>
          </span>
        </span>
      </span>
      <span
        className="autofit-col autofit-col-expand"
      >
        <span
          className="autofit-section"
        >
          <span
            className="card-title text-truncate"
          >
            Full Page Application
          </span>
        </span>
      </span>
    </span>
  </span>
</a>
`;

exports[`ClayCard renders a ClayCard as template navigation card with icon instead of image 1`] = `
<a
  className="card card-interactive card-interactive-primary card-type-template template-card"
>
  <span
    className="aspect-ratio"
  >
    <span
      className="aspect-ratio-item aspect-ratio-item-center-middle aspect-ratio-item-flush"
    >
      <svg
        className="lexicon-icon lexicon-icon-page-template"
        role="presentation"
      >
        <use
          xlinkHref="/path/to/some/resource.svg#page-template"
        />
      </svg>
    </span>
  </span>
  <span
    className="card-body"
  >
    <span
      className="card-title text-truncate"
    >
      Blog
    </span>
  </span>
</a>
`;

exports[`ClayCard renders a ClayCard as user card 1`] = `
<div
  className="card card-type-asset form-check form-check-card form-check-top-left user-card"
>
  <div
    className="card"
  >
    <div
      className="card-item-first aspect-ratio"
    >
      <div
        className="aspect-ratio-item aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon"
      >
        <span
          className="sticker sticker-user-icon sticker-circle sticker-secondary"
        >
          <span
            className="sticker-overlay"
          >
            <svg
              className="lexicon-icon lexicon-icon-user"
              role="presentation"
            >
              <use
                xlinkHref="/path/to/some/resource.svg#user"
              />
            </svg>
          </span>
        </span>
      </div>
    </div>
    <div
      className="card-body"
    >
      <div
        className="card-row"
      >
        <div
          className="autofit-col autofit-col-expand"
        >
          <div
            className="card-title text-truncate"
          >
            Macaulay Culkin
          </div>
          <div
            className="card-subtitle text-truncate"
          >
            Author Action
          </div>
          <div
            className="card-detail"
          >
            <span
              className="label label-success"
            >
              <span
                className="label-item label-item-expand"
              >
                Approved
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayCard renders a ClayCard as user selectable card 1`] = `
<div
  className="card-type-asset form-check form-check-card form-check-top-left user-card"
>
  <div
    className="card"
  >
    <div
      className="card-item-first aspect-ratio"
    >
      <div
        className="custom-control custom-checkbox"
      >
        <label>
          <input
            checked={false}
            className="custom-control-input"
            disabled={false}
            onChange={[Function]}
            type="checkbox"
            value="false"
          />
          <span
            className="custom-control-label"
          />
          <div
            className="aspect-ratio"
          >
            <div
              className="aspect-ratio-item aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon"
            >
              <span
                className="sticker sticker-user-icon sticker-circle sticker-secondary"
              >
                <span
                  className="sticker-overlay"
                >
                  <svg
                    className="lexicon-icon lexicon-icon-user"
                    role="presentation"
                  >
                    <use
                      xlinkHref="/path/to/some/resource.svg#user"
                    />
                  </svg>
                </span>
              </span>
            </div>
          </div>
        </label>
      </div>
    </div>
    <div
      className="card-body"
    >
      <div
        className="card-row"
      >
        <div
          className="autofit-col autofit-col-expand"
        >
          <div
            className="card-title text-truncate"
          >
            Adélaide
          </div>
          <div
            className="card-subtitle text-truncate"
          >
            Author Action
          </div>
          <div
            className="card-detail"
          >
            <span
              className="label label-warning"
            >
              <span
                className="label-item label-item-expand"
              >
                Rejected
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayCard renders a group of ClayCards 1`] = `
Array [
  <ul
    className="card-page"
  >
    <li
      className="card-page-item card-page-item-header"
    >
      <p
        className="card-section-header"
      >
        Test Files
      </p>
    </li>
    <li
      className="card-page-item card-page-item-directory"
    >
      <div
        className="card card-type-asset file-card"
      >
        <div
          className="card-item-first aspect-ratio"
        >
          <div
            className="aspect-ratio-item aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon"
          >
            <svg
              className="lexicon-icon lexicon-icon-documents-and-media"
              role="presentation"
            >
              <use
                xlinkHref="/path/to/some/resource.svg#documents-and-media"
              />
            </svg>
          </div>
          <span
            className="sticker sticker-rounded sticker-danger sticker-bottom-left"
          >
            <span
              className="sticker-overlay"
            >
              DOC
            </span>
          </span>
        </div>
        <div
          className="card-body"
        >
          <div
            className="card-row"
          >
            <div
              className="autofit-col autofit-col-expand"
            >
              <section
                className="autofit-section"
              >
                <div
                  className="card-title text-truncate"
                >
                  deliverable.doc
                </div>
                <div
                  className="card-subtitle text-truncate"
                >
                  Stevie Ray Vaughn
                </div>
                <div
                  className="card-detail"
                >
                  <span
                    className="label label-success"
                  >
                    <span
                      className="label-item label-item-expand"
                    >
                      Approved
                    </span>
                  </span>
                </div>
              </section>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      className="card-page-item card-page-item-directory"
    >
      <div
        className="card card-type-asset file-card"
      >
        <div
          className="card-item-first aspect-ratio"
        >
          <div
            className="aspect-ratio-item aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon"
          >
            <svg
              className="lexicon-icon lexicon-icon-documents-and-media"
              role="presentation"
            >
              <use
                xlinkHref="/path/to/some/resource.svg#documents-and-media"
              />
            </svg>
          </div>
          <span
            className="sticker sticker-rounded sticker-danger sticker-bottom-left"
          >
            <span
              className="sticker-overlay"
            >
              DOC
            </span>
          </span>
        </div>
        <div
          className="card-body"
        >
          <div
            className="card-row"
          >
            <div
              className="autofit-col autofit-col-expand"
            >
              <section
                className="autofit-section"
              >
                <div
                  className="card-title text-truncate"
                >
                  deliverable.doc
                </div>
                <div
                  className="card-subtitle text-truncate"
                >
                  Stevie Ray Vaughn
                </div>
                <div
                  className="card-detail"
                >
                  <span
                    className="label label-success"
                  >
                    <span
                      className="label-item label-item-expand"
                    >
                      Approved
                    </span>
                  </span>
                </div>
              </section>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      className="card-page-item card-page-item-directory"
    >
      <div
        className="card card-type-asset file-card"
      >
        <div
          className="card-item-first aspect-ratio"
        >
          <div
            className="aspect-ratio-item aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon"
          >
            <svg
              className="lexicon-icon lexicon-icon-documents-and-media"
              role="presentation"
            >
              <use
                xlinkHref="/path/to/some/resource.svg#documents-and-media"
              />
            </svg>
          </div>
          <span
            className="sticker sticker-rounded sticker-danger sticker-bottom-left"
          >
            <span
              className="sticker-overlay"
            >
              DOC
            </span>
          </span>
        </div>
        <div
          className="card-body"
        >
          <div
            className="card-row"
          >
            <div
              className="autofit-col autofit-col-expand"
            >
              <section
                className="autofit-section"
              >
                <div
                  className="card-title text-truncate"
                >
                  deliverable.doc
                </div>
                <div
                  className="card-subtitle text-truncate"
                >
                  Stevie Ray Vaughn
                </div>
                <div
                  className="card-detail"
                >
                  <span
                    className="label label-success"
                  >
                    <span
                      className="label-item label-item-expand"
                    >
                      Approved
                    </span>
                  </span>
                </div>
              </section>
            </div>
          </div>
        </div>
      </div>
    </li>
  </ul>,
  <ul
    className="card-page"
  >
    <li
      className="card-page-item card-page-item-header"
    >
      <p
        className="card-section-header"
      >
        Test Users
      </p>
    </li>
    <li
      className="card-page-item card-page-item-directory"
    >
      <div
        className="card card-type-asset form-check form-check-card form-check-top-left user-card"
      >
        <div
          className="card"
        >
          <div
            className="card-item-first aspect-ratio"
          >
            <div
              className="aspect-ratio-item aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon"
            >
              <span
                className="sticker sticker-user-icon sticker-circle sticker-secondary"
              >
                <span
                  className="sticker-overlay"
                >
                  <svg
                    className="lexicon-icon lexicon-icon-user"
                    role="presentation"
                  >
                    <use
                      xlinkHref="/path/to/some/resource.svg#user"
                    />
                  </svg>
                </span>
              </span>
            </div>
          </div>
          <div
            className="card-body"
          >
            <div
              className="card-row"
            >
              <div
                className="autofit-col autofit-col-expand"
              >
                <div
                  className="card-title text-truncate"
                >
                  Macaulay Culkin
                </div>
                <div
                  className="card-subtitle text-truncate"
                >
                  Author Action
                </div>
                <div
                  className="card-detail"
                >
                  <span
                    className="label label-success"
                  >
                    <span
                      className="label-item label-item-expand"
                    >
                      Approved
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      className="card-page-item card-page-item-directory"
    >
      <div
        className="card card-type-asset form-check form-check-card form-check-top-left user-card"
      >
        <div
          className="card"
        >
          <div
            className="card-item-first aspect-ratio"
          >
            <div
              className="aspect-ratio-item aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon"
            >
              <span
                className="sticker sticker-user-icon sticker-circle sticker-secondary"
              >
                <span
                  className="sticker-overlay"
                >
                  <svg
                    className="lexicon-icon lexicon-icon-user"
                    role="presentation"
                  >
                    <use
                      xlinkHref="/path/to/some/resource.svg#user"
                    />
                  </svg>
                </span>
              </span>
            </div>
          </div>
          <div
            className="card-body"
          >
            <div
              className="card-row"
            >
              <div
                className="autofit-col autofit-col-expand"
              >
                <div
                  className="card-title text-truncate"
                >
                  Macaulay Culkin
                </div>
                <div
                  className="card-subtitle text-truncate"
                >
                  Author Action
                </div>
                <div
                  className="card-detail"
                >
                  <span
                    className="label label-success"
                  >
                    <span
                      className="label-item label-item-expand"
                    >
                      Approved
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      className="card-page-item card-page-item-directory"
    >
      <div
        className="card card-type-asset form-check form-check-card form-check-top-left user-card"
      >
        <div
          className="card"
        >
          <div
            className="card-item-first aspect-ratio"
          >
            <div
              className="aspect-ratio-item aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon"
            >
              <span
                className="sticker sticker-user-icon sticker-circle sticker-secondary"
              >
                <span
                  className="sticker-overlay"
                >
                  <svg
                    className="lexicon-icon lexicon-icon-user"
                    role="presentation"
                  >
                    <use
                      xlinkHref="/path/to/some/resource.svg#user"
                    />
                  </svg>
                </span>
              </span>
            </div>
          </div>
          <div
            className="card-body"
          >
            <div
              className="card-row"
            >
              <div
                className="autofit-col autofit-col-expand"
              >
                <div
                  className="card-title text-truncate"
                >
                  Macaulay Culkin
                </div>
                <div
                  className="card-subtitle text-truncate"
                >
                  Author Action
                </div>
                <div
                  className="card-detail"
                >
                  <span
                    className="label label-success"
                  >
                    <span
                      className="label-item label-item-expand"
                    >
                      Approved
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </li>
  </ul>,
]
`;
